--- a/packages/docs/src/pages/tokens/font-sizes.stories.mdx
+++ b/packages/docs/src/pages/tokens/font-sizes.stories.mdx
@@ -1,9 +1,12 @@
-import {Meta} from '@storybook/addon-docs'
-import {TokensGrid} from '../../components/TokensGrid'
+import { Unstyled } from '@storybook/blocks'
+import { Meta } from '@storybook/addon-docs'
+import { TokensGrid } from '../../components/TokensGrid'
 import { fontSizes } from '@ignite-ui/tokens'
 
 <Meta title="Tokens/Font Sizes" />
 
 # Font Sizes
 
-<TokensGrid tokens={fontSizes} hasRemValue/>
+<Unstyled>
+    <TokensGrid tokens={fontSizes} hasRemValue/>
+</Unstyled>
