--- a/packages/docs/src/pages/tokens/font-weights.stories.mdx
+++ b/packages/docs/src/pages/tokens/font-weights.stories.mdx
@@ -1,3 +1,4 @@
+import { Unstyled } from '@storybook/blocks'
 import {Meta} from '@storybook/addon-docs'
 import {TokensGrid} from '../../components/TokensGrid'
 import { fontWeights } from '@ignite-ui/tokens'
@@ -6,4 +7,6 @@ import { fontWeights } from '@ignite-ui/tokens'
 
 # Font Weights
 
-<TokensGrid tokens={fontWeights}/>
+<Unstyled>
+    <TokensGrid tokens={fontWeights}/>
+</Unstyled>
