--- a/packages/docs/src/pages/tokens/fonts.stories.mdx
+++ b/packages/docs/src/pages/tokens/fonts.stories.mdx
@@ -1,3 +1,4 @@
+import { Unstyled } from '@storybook/blocks'
 import {Meta} from '@storybook/addon-docs'
 import {TokensGrid} from '../../components/TokensGrid'
 import { fonts } from '@ignite-ui/tokens'
@@ -6,4 +7,6 @@ import { fonts } from '@ignite-ui/tokens'
 
 # Font Families
 
-<TokensGrid tokens={fonts}/>
+<Unstyled>
+    <TokensGrid tokens={fonts}/>
+</Unstyled>
