--- a/packages/docs/src/pages/tokens/line-height.stories.mdx
+++ b/packages/docs/src/pages/tokens/line-height.stories.mdx
@@ -1,3 +1,4 @@
+import { Unstyled } from '@storybook/blocks'
 import {Meta} from '@storybook/addon-docs'
 import {TokensGrid} from '../../components/TokensGrid'
 import { lineHeights } from '@ignite-ui/tokens'
@@ -6,4 +7,6 @@ import { lineHeights } from '@ignite-ui/tokens'
 
 # Line Heights
 
-<TokensGrid tokens={lineHeights}/>
+<Unstyled>
+    <TokensGrid tokens={lineHeights}/>
+</Unstyled>
