--- a/packages/docs/src/pages/tokens/radii.stories.mdx
+++ b/packages/docs/src/pages/tokens/radii.stories.mdx
@@ -1,3 +1,4 @@
+import { Unstyled } from '@storybook/blocks'
 import {Meta} from '@storybook/addon-docs'
 import {TokensGrid} from '../../components/TokensGrid'
 import { radii } from '@ignite-ui/tokens'
@@ -6,4 +7,6 @@ import { radii } from '@ignite-ui/tokens'
 
 # Radii
 
-<TokensGrid tokens={radii}/>
+<Unstyled>
+    <TokensGrid tokens={radii}/>
+</Unstyled>
