--- a/packages/docs/src/pages/tokens/space.stories.mdx
+++ b/packages/docs/src/pages/tokens/space.stories.mdx
@@ -1,3 +1,4 @@
+import { Unstyled } from '@storybook/blocks'
 import {Meta} from '@storybook/addon-docs'
 import {TokensGrid} from '../../components/TokensGrid'
 import { space } from '@ignite-ui/tokens'
@@ -6,4 +7,6 @@ import { space } from '@ignite-ui/tokens'
 
 # Space
 
-<TokensGrid tokens={space} hasRemValue/>
+<Unstyled>
+    <TokensGrid tokens={space} hasRemValue/>
+</Unstyled>
