--- a/packages/docs/src/pages/tokens/line-height.stories.mdx
+++ b/packages/docs/src/pages/tokens/line-height.stories.mdx
@@ -1,7 +1,7 @@
 import { Unstyled } from '@storybook/blocks'
 import {Meta} from '@storybook/addon-docs'
 import {TokensGrid} from '../../components/TokensGrid'
-import { lineHeights } from '@ignite-ui/tokens'
+import { lineHeights } from '@felipesouzab-ignite-ui/tokens'
 
 <Meta title="Tokens/Line Heights" />
 
